Добавление минификации файлов css и js

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 /* Fonts */
 
 @font-face {
-  font-family: "Open Sans";
+  font-family: "Open Sans", "Arial", sans-serif;
   src: url("../fonts/opensans.woff2") format("woff2"),
   url("../fonts/opensans.woff") format("woff");
   font-weight: 300;
@@ -16,7 +16,7 @@
 }
 
 @font-face {
-  font-family: "Open Sans";
+  font-family: "Open Sans", "Arial", sans-serif;
   src: url("../fonts/opensanslight.woff2") format("woff2"),
   url("../fonts/opensanslight.woff") format("woff");
   font-weight: 100;
@@ -24,7 +24,7 @@
 }
 
 @font-face {
-  font-family: "Gilroy";
+  font-family: "Gilroy", "Arial", sans-serif;
   src: url("../fonts/gilroylight.woff2") format("woff2"),
   url("../fonts/gilroylight.woff") format("woff");
   font-weight: 400;
@@ -32,7 +32,7 @@
 }
 
 @font-face {
-  font-family: "Gilroy";
+  font-family: "Gilroy", "Arial", sans-serif;
   src: url("../fonts/gilroyextrabold.woff2") format("woff2"),
   url("../fonts/gilroyextrabold.woff") format("woff");
   font-weight: 800;
